# stm32-rtc-scheduler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  SConstruct  _free_r_t_o_s_config_8h.html  _free_r_t_o_s_config_8h_source.html  annotated.html  annotated_dup.js  azure-pipelines.yml  classes.html  core__stop_8c.html  core__stop_8c.js  core__stop_8c_source.html  core__stop_8h.html  core__stop_8h.js  core__stop_8h_source.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  error__handler_8c.html  error__handler_8c.js  error__handler_8c_source.html  error__handler_8h.html  error__handler_8h.js  error__handler_8h_source.html  files.html  freertos__tasks__c__additions_8h.html  freertos__tasks__c__additions_8h.js  freertos__tasks__c__additions_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  (+40 more)
cmake/: gcc-arm-none-eabi.cmake
docs/: Doxyfile
docs/img/: stm32-rtc-scheduler.drawio
include/: FreeRTOSConfig.h  core_stop.h  error_handler.h  freertos_tasks_c_additions.h  hardware.h  main.h  rtc.h  scheduler.h  stm32l4xx_hal_conf.h
projects/EWARM/: Project.eww  stm32-rtc-scheduler.ewd  stm32-rtc-scheduler.ewp  stm32-rtc-scheduler.ewt  stm32l496xx_flash.icf  stm32l496xx_sram.icf
projects/GCC/: Makefile  SConscript  stm32l496xx_flash.ld
projects/MDK-ARM/: startup_stm32l496xx.s  stm32-rtc-scheduler.uvprojx
python/: common.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+18 more)
source/: core_stop.c  error_handler.c  hardware.c  main.c  rtc.c  scheduler.c  stm32l4xx_hal_timebase.c  stm32l4xx_it.c  system_stm32l4xx.c
